feat 更改截图编码使用的工具类